--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <button (click)="addArticle(newtitle, newlink)" class="btn btn-primary">
-        Submit link
+        Submit link <span>Total Points[{{totalPoints}}]</span>
       </button>
     </fieldset>
   </form>
@@ -29,7 +29,7 @@
           {{ article.votes }}
         </div>
         <div class="card-subtitle text-muted">
-          Points
+          Votes
         </div>
       </div>
     </div>
